Port latest changes from upstream